Updated screen recording and linked 'Contact Us' page back to index. Prep-html-links exercise completed with new changes.

--- a/prep-html-links/contact-us/contact-us.html
+++ b/prep-html-links/contact-us/contact-us.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Contact Us</h1>
   <div>
-    <a href="#index.html">
+    <a href="/prep-html-links/index.html">
       Click here to go to the home page
     </a>
   </div>
