--- a/prep-css-layout-classes/index.html
+++ b/prep-css-layout-classes/index.html
@@ -39,6 +39,8 @@
 
   <!-- Complete the HTML here -->
   <div class="container">
+    <h1>Indiana Jones</h1>
+
     <div class="row">
       <div class="column">
         <img src="images/raiders.jpg" alt="Raiders" style="width: 100%">
@@ -56,7 +58,7 @@
         <img src="images/crusade.jpg" alt="Crusade" style="width: 100%">
         <h3>The Last Crusaders</h3>
         <p>In 1938, after his father Professor Henry Jones, Sr. goes missing while pursuing the Holy Grail, Professor Henry
-        "Indiana" Jones, Jr. finds himself up against Adolf Hitler's Nazis again to stop them from obtaining its powers. 7/10</p>
+        Indiana Jones, Jr. finds himself up against Adolf Hitler's Nazis again to stop them from obtaining its powers. 7/10</p>
       </div>
     </div>
   </div>
